--- a/composer.json
+++ b/composer.json
@@ -52,6 +52,7 @@
     "wpackagist-plugin/wp-fail2ban": "*",
     "wpackagist-plugin/filenames-to-latin": "*",
     "wpackagist-plugin/debug-bar": "*",
+    "wpackagist-plugin/cms-tree-page-view": "*",
     "wpackagist-plugin/w3-total-cache": "*",
     "wpackagist-plugin/redirection": "*",
     "wpackagist-plugin/disable-comments": "*",
