--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,12 @@
     "post-root-package-install": [
         "Roots\\Bedrock\\Installer::addSalts",
         "scripts/Roots/Bedrock/install_theme.sh",
+        "scripts/Roots/Bedrock/npm_install.sh",
         "scripts/Roots/Bedrock/setup_rewrites.sh"
+    ],
+    "post-install-cmd": [
+        "scripts/Roots/Bedrock/setup_rewrites.sh",
+        "scripts/Roots/Bedrock/npm_install.sh"
     ]
   },
   "repositories": [
