added new scripts

--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,8 @@
     "post-root-package-install": [
         "Roots\\Bedrock\\Installer::addSalts",
         "scripts/Roots/Bedrock/install_theme.sh",
-        "scripts/Roots/Bedrock/npm_install.sh"
+        "scripts/Roots/Bedrock/npm_install.sh",
+        "scripts/Roots/Bedrock/plugin_activate.sh"
     ]
   },
   "repositories": [
