--- a/composer.json
+++ b/composer.json
@@ -33,9 +33,12 @@
   "scripts": {
     "post-root-package-install": [
         "Roots\\Bedrock\\Installer::addSalts",
-        "scripts/Roots/Bedrock/install_theme.sh",
+        "scripts/Roots/Bedrock/install_theme.sh"
+    ],
+    "post-create-project-cmd": [
         "scripts/Roots/Bedrock/npm_install.sh",
-        "scripts/Roots/Bedrock/plugin_activate.sh"
+        "scripts/Roots/Bedrock/plugin_activate.sh",
+        "scripts/Roots/Bedrock/setup_rewrites.sh"
     ]
   },
   "repositories": [
