--- a/composer.json
+++ b/composer.json
@@ -65,6 +65,7 @@
     "composer/installers": "v1.0.12",
     "vlucas/phpdotenv": "1.0.9",
     "wpackagist-plugin/wordpress-seo": "*",
+    "wpackagist-plugin/wordfence": "*",
     "wpackagist-plugin/filenames-to-latin": "*",
     "wpackagist-plugin/debug-bar": "*",
     "wpackagist-plugin/cms-tree-page-view": "*",
