--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,7 @@
     "psr-0": {"Roots\\Bedrock\\Installer": "scripts"}
   },
   "scripts": {
-    "post-root-package-install": [
+    "post-create-project-cmd": [
       "Roots\\Bedrock\\Installer::addSalts",
       "scripts/Roots/Bedrock/install_theme.sh",
       "scripts/Roots/Bedrock/npm_install.sh"
