updated bundler & composer & deploy scripts

--- a/composer.json
+++ b/composer.json
@@ -64,10 +64,9 @@
     "johnpbloch/wordpress": "*",
     "composer/installers": "v1.0.12",
     "vlucas/phpdotenv": "1.0.9",
-    "wpackagist-plugin/wordpress-seo": "*",
+    "wpackagist-plugin/wordpress-seo": "2.3.5",
     "wpackagist-plugin/wordfence": "*",
     "wpackagist-plugin/filenames-to-latin": "*",
-    "wpackagist-plugin/debug-bar": "*",
     "wpackagist-plugin/cms-tree-page-view": "*",
     "wpackagist-plugin/w3-total-cache": "*",
     "wpackagist-plugin/redirection": "*",
@@ -80,7 +79,7 @@
     "digitalunited/vc-clean-up": "*",
     "digitalunited/wordpress-clean-up": "*",
     "roots/soil": "*",
-    "careofhaus/care-of-haus": "dev-master",
+    "careofhaus/careofhaus": "dev-master",
     "careofhaus/advanced-custom-fields-pro": "dev-master",
     "careofhaus/visual-composer": "dev-master",
     "careofhaus/gravityforms": "dev-master"
