Added roots/wp-stage-switcher plugin

--- a/composer.json
+++ b/composer.json
@@ -78,7 +78,8 @@
     "careofhaus/advanced-custom-fields-pro": "*",
     "careofhaus/js_composer": "*",
     "careofhaus/gravityforms": "*",
-    "careofhaus/coh-responsive-images": "dev-master"
+    "careofhaus/coh-responsive-images": "dev-master",
+    "roots/wp-stage-switcher": "*",
   },
   "extra": {
     "installer-paths": {
