updates on plugins

--- a/composer.json
+++ b/composer.json
@@ -68,13 +68,14 @@
     "wpackagist-plugin/redirection": "*",
     "wpackagist-plugin/disable-comments": "*",
     "wpackagist-plugin/duracelltomi-google-tag-manager": "*",
+    "wpackagist-plugin/advanced-custom-fields-nav-menu-field": "*",
     "wpackagist-plugin/post-duplicator": "*",
     "wpackagist-plugin/nginx-helper": "*",
     "wpackagist-plugin/usersnap": "*",
     "digitalunited/components": "*",
     "digitalunited/vc-clean-up": "*",
     "digitalunited/wordpress-clean-up": "*",
-    "roots/soil": "3.7.0",
+    "roots/soil": "*",
     "careofhaus/advanced-custom-fields-pro": "*",
     "careofhaus/js_composer": "*",
     "careofhaus/gravityforms": "*",
