Added Mailtrap, Google Maps API key & max revisions.

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,9 @@ DB_HOST=localhost
 WP_ENV=development
 WP_HOME=http://hausrock.se.dev
 WP_SITEURL=http://hausrock.se.dev/wp
+
+MAILTRAP=true
+MAILTRAP_USERNAME=2abb4ab29213dd
+MAILTRAP_PASSWORD=1a46bbf72d3f29
+
+GOOGLE_MAPS_API_KEY=AIzaSyDykCpGQ6q6aT0A0S5fYIr-J3TN4CFxkCY
