Changed from .dev to .test

--- a/.env.example
+++ b/.env.example
@@ -4,8 +4,8 @@ DB_PASSWORD=
 DB_HOST=localhost
 
 WP_ENV=development
-WP_HOME=http://hausrock.se.dev
-WP_SITEURL=http://hausrock.se.dev/wp
+WP_HOME=http://hausrock.se.test
+WP_SITEURL=http://hausrock.se.test/wp
 
 MAILTRAP=true
 MAILTRAP_USERNAME=2abb4ab29213dd
